composed alexs repo

--- a/TensorFlow Testing.ipynb
+++ b/TensorFlow Testing.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the Tensorflow has its own database, and it happens to include our dataset CIFAR10. So instead of importing the dataset provided by our professor, I just use Tensorflow's database. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -53,6 +60,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that the images are the same."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -70,6 +84,13 @@
    ],
    "source": [
     "train_images.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And of the same dimension. Above is the shape for training set only."
    ]
   },
   {
@@ -127,24 +148,6 @@
    ],
    "source": [
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tensorflow.python.keras.layers.pooling.MaxPooling2D object at 0x00000226A7AD28D0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "shit = layers.MaxPooling2D((2, 2));\n",
-    "print(shit)"
    ]
   },
   {
@@ -240,6 +243,13 @@
    ],
    "source": [
     "print(test_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The hope is to use Fractional Max Pooling to make this accuracy closer to 90%."
    ]
   }
  ],
